@@ -1,5 +1,10 @@
 2008-07-17  Mirco Bauer <meebey@meebey.net> 
 
+	* Protocols/Irc/IrcProtocolManager.cs: Added listing ban list support to
+	  /ban command (closes trac bug #17).
+
+2008-07-17  Mirco Bauer <meebey@meebey.net> 
+
 	* Protocols/Irc/IrcProtocolManager.cs: Implemented /who command (closes trac
 	  bug #51).
 
